Added todays games dataframe in home page

--- a/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "6301aaf2",
    "metadata": {},
    "outputs": [],
@@ -47,44 +47,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2c1e395",
+   "execution_count": 21,
+   "id": "d35b7752",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import statsapi\n",
-    "# import pandas as pd\n",
+    "schedule = statsapi.schedule(date=  '6/15/2025')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e148f575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsapi\n",
+    "import pandas as pd\n",
+    "import pytz\n",
+    "from datetime import datetime\n",
     "\n",
-    "# 1. Get today's date automatically\n",
-    "today_str = datetime.now().strftime('%m/%d/%Y')\n",
+    "# Team abbreviations to keep the table mobile-friendly\n",
+    "TEAM_ABBR = {\n",
+    "    'Arizona Diamondbacks': 'ARI', 'Atlanta Braves': 'ATL', 'Baltimore Orioles': 'BAL',\n",
+    "    'Boston Red Sox': 'BOS', 'Chicago White Sox': 'CWS', 'Chicago Cubs': 'CHC',\n",
+    "    'Cincinnati Reds': 'CIN', 'Cleveland Guardians': 'CLE', 'Colorado Rockies': 'COL',\n",
+    "    'Detroit Tigers': 'DET', 'Houston Astros': 'HOU', 'Kansas City Royals': 'KC',\n",
+    "    'Los Angeles Angels': 'LAA', 'Los Angeles Dodgers': 'LAD', 'Miami Marlins': 'MIA',\n",
+    "    'Milwaukee Brewers': 'MIL', 'Minnesota Twins': 'MIN', 'New York Mets': 'NYM',\n",
+    "    'New York Yankees': 'NYY', 'Athletics': 'ATH', 'Philadelphia Phillies': 'PHI',\n",
+    "    'Pittsburgh Pirates': 'PIT', 'San Diego Padres': 'SD', 'San Francisco Giants': 'SF',\n",
+    "    'Seattle Mariners': 'SEA', 'St. Louis Cardinals': 'STL', 'Tampa Bay Rays': 'TB',\n",
+    "    'Texas Rangers': 'TEX', 'Toronto Blue Jays': 'TOR', 'Washington Nationals': 'WSH'\n",
+    "}\n",
     "\n",
-    "def get_daily_starters(date_str):\n",
+    "def format_to_local_time(utc_str, local_tz_str='US/Eastern'):\n",
+    "    \"\"\"Helper to convert ISO UTC string to 12-hour local time.\"\"\"\n",
+    "    if not utc_str:\n",
+    "        return \"TBD\"\n",
+    "    try:\n",
+    "        # Parse UTC string (e.g., 2025-06-15T18:10:00Z)\n",
+    "        utc_dt = datetime.fromisoformat(utc_str.replace('Z', '+00:00'))\n",
+    "        local_tz = pytz.timezone(local_tz_str)\n",
+    "        local_dt = utc_dt.astimezone(local_tz)\n",
+    "        return local_dt.strftime('%I:%M %p')\n",
+    "    except Exception:\n",
+    "        return \"TBD\"\n",
+    "\n",
+    "def get_daily_starters(date_str, user_tz='US/Eastern'):\n",
     "    # 1. Fetch all games for the specified date\n",
-    "    # No team ID means it pulls all 30 teams\n",
-    "    schedule = statsapi.schedule(date=  date_str)\n",
+    "    schedule = statsapi.schedule(date=date_str)\n",
     "    \n",
+    "    if not schedule:\n",
+    "        return pd.DataFrame() # Return empty if no games\n",
+    "        \n",
     "    games_list = []\n",
     "    \n",
     "    for game in schedule:\n",
-    "        # Extract the core info for the Matchup Predictor\n",
+    "        # Convert UTC to Local Time using our helper\n",
+    "        raw_time = game.get(\"game_datetime\")\n",
+    "        local_time = format_to_local_time(raw_time, user_tz)\n",
+    "\n",
+    "        # Extract names and apply abbreviations\n",
+    "        home_full = game.get(\"home_name\")\n",
+    "        away_full = game.get(\"away_name\")\n",
+    "\n",
     "        game_data = {\n",
-    "            \"game_id\": game.get(\"game_id\"),\n",
-    "            \"home_team\": game.get(\"home_name\"),\n",
-    "            \"away_team\": game.get(\"away_name\"),\n",
-    "            \"home_pitcher\": game.get(\"home_probable_pitcher\", \"TBD\"),\n",
-    "            \"away_pitcher\": game.get(\"away_probable_pitcher\", \"TBD\"),\n",
-    "            \"status\": game.get(\"status\"),\n",
-    "            \"venue\": game.get(\"venue_name\")\n",
+    "            \"Time\": local_time,\n",
+    "            \"Away\": TEAM_ABBR.get(away_full, away_full),\n",
+    "            \"Home\": TEAM_ABBR.get(home_full, home_full),\n",
+    "            \"Away Pitcher\": game.get(\"away_probable_pitcher\", \"TBD\"),\n",
+    "            \"Home Pitcher\": game.get(\"home_probable_pitcher\", \"TBD\"),\n",
+    "            \"Status\": game.get(\"status\"),\n",
+    "            \"Venue\": game.get(\"venue_name\"),\n",
+    "            \"game_id\": game.get(\"game_id\") # Keeping ID for background lookups\n",
     "        }\n",
     "        games_list.append(game_data)\n",
     "    \n",
@@ -93,23 +129,13 @@
     "    return df\n",
     "\n",
     "# Test with June 15, 2025\n",
-    "df_starters = get_daily_starters('6/15/2025')\n",
-    "# TODO Need to create a function if the table is empty\n",
-    "#df_starters = get_daily_starters(today_str)\n",
+    "df_starters = get_daily_starters('6/15/2025', 'US/Eastern')\n",
     "\n",
-    "# Display the first few rows\n",
-    "print(df_starters.head())\n",
-    "\n",
-    "# Integrating with your \"Matchup Predictor\"\n",
-    "# Now that you have this DataFrame, you can loop through the home_pitcher and away_pitcher columns.\n",
-    "\n",
-    "# For each name:\n",
-    "\n",
-    "# Look up their Archetype in your database.\n",
-    "\n",
-    "# Highlight the \"Best Matchups\" for that day \n",
-    "# (e.g., \"Today, 3 teams are facing 'Soft Tossers'—check your O's hitters' \n",
-    "# luck scores against that archetype\")."
+    "# # Display result\n",
+    "# if not df_starters.empty:\n",
+    "#     print(df_starters[['Time', 'Away', 'Home', 'Away Pitcher', 'Home Pitcher']].head())\n",
+    "# else:\n",
+    "#     print(\"No games found for this date.\")"
    ]
   },
   {
@@ -418,14 +444,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9411378c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import statsapi\n",
-    "import pandas as pd\n",
-    "\n",
     "def get_division_standings_dfs():\n",
     "    \"\"\"Fetches MLB standings, abbreviates team names, and formats for mobile.\"\"\"\n",
     "    \n",
@@ -443,7 +466,8 @@
     "    }\n",
     "\n",
     "    # leagueId 103 is AL, 104 is NL\n",
-    "    standings_raw = statsapi.standings_data(leagueId=\"103,104\")\n",
+    "    # standings_raw = statsapi.standings_data(leagueId=\"103,104\") #This should be dynamic based on current season\n",
+    "    standings_raw = statsapi.standings_data(leagueId=\"103,104\", season=2025)\n",
     "    division_dict = {}\n",
     "\n",
     "    for division_id in standings_raw:\n",
@@ -472,12 +496,14 @@
     "        }\n",
     "        \n",
     "        df = df[list(cols_map.keys())].rename(columns=cols_map)\n",
-    "        division_dict[div_name] = df"
+    "        division_dict[div_name] = df\n",
+    "        \n",
+    "    return division_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "b8220c3e",
    "metadata": {},
    "outputs": [],
@@ -487,12 +513,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "08922795",
    "metadata": {},
    "outputs": [],
    "source": [
-    "standings_raw = statsapi.standings_data(leagueId=\"103,104\", season=2025)"
+    "standings_raw = statsapi.standings_data(leagueId=\"103\", season=2025)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "083303c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standings_raw = statsapi.standings_data(leagueId=\"103\", season=2025, division=\"all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "96864dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsapi\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_al_league_standings():\n",
+    "    \"\"\"Fetches American League standings as a single DataFrame ordered by Rank.\"\"\"\n",
+    "    \n",
+    "    TEAM_ABBR = {\n",
+    "        'Arizona Diamondbacks': 'ARI', 'Atlanta Braves': 'ATL', 'Baltimore Orioles': 'BAL',\n",
+    "        'Boston Red Sox': 'BOS', 'Chicago White Sox': 'CWS', 'Chicago Cubs': 'CHC',\n",
+    "        'Cincinnati Reds': 'CIN', 'Cleveland Guardians': 'CLE', 'Colorado Rockies': 'COL',\n",
+    "        'Detroit Tigers': 'DET', 'Houston Astros': 'HOU', 'Kansas City Royals': 'KC',\n",
+    "        'Los Angeles Angels': 'LAA', 'Los Angeles Dodgers': 'LAD', 'Miami Marlins': 'MIA',\n",
+    "        'Milwaukee Brewers': 'MIL', 'Minnesota Twins': 'MIN', 'New York Mets': 'NYM',\n",
+    "        'New York Yankees': 'NYY', 'Athletics': 'ATH', 'Philadelphia Phillies': 'PHI',\n",
+    "        'Pittsburgh Pirates': 'PIT', 'San Diego Padres': 'SD', 'San Francisco Giants': 'SF',\n",
+    "        'Seattle Mariners': 'SEA', 'St. Louis Cardinals': 'STL', 'Tampa Bay Rays': 'TB',\n",
+    "        'Texas Rangers': 'TEX', 'Toronto Blue Jays': 'TOR', 'Washington Nationals': 'WSH'\n",
+    "    }\n",
+    "\n",
+    "    # Fetch data only for the American League (103)\n",
+    "    standings_raw = statsapi.standings_data(leagueId=\"103\", season=2025)\n",
+    "    \n",
+    "    # Combine all teams from all AL divisions into one list\n",
+    "    all_al_teams = []\n",
+    "    for division_id in standings_raw:\n",
+    "        all_al_teams.extend(standings_raw[division_id]['teams'])\n",
+    "    \n",
+    "    # Create the single DataFrame\n",
+    "    df = pd.DataFrame(all_al_teams)\n",
+    "    \n",
+    "    # 1. Abbreviate names\n",
+    "    df['name'] = df['name'].map(TEAM_ABBR).fillna(df['name'])\n",
+    "    \n",
+    "    # 2. Calculate PCT (Standard MLB format)\n",
+    "    df['W%'] = df['w'] / (df['w'] + df['l']).replace(0, 1)\n",
+    "    df['W%_sort'] = df['W%'] # Keep a numeric version for sorting\n",
+    "    df['W%'] = df['W%'].apply(lambda x: '{:.3f}'.format(x).lstrip('0'))\n",
+    "    \n",
+    "    # 3. Map and Rename\n",
+    "    cols_map = {\n",
+    "        'name': 'TM',\n",
+    "        'w': 'W',\n",
+    "        'l': 'L',\n",
+    "        'W%': 'PCT',\n",
+    "        'gb': 'GB',\n",
+    "        'wc_gb': 'WCGB',\n",
+    "        'league_rank': 'LG RNK'\n",
+    "    }\n",
+    "    \n",
+    "    # Convert 'league_rank' to numeric to ensure correct sorting (1 before 10)\n",
+    "    df['league_rank'] = pd.to_numeric(df['league_rank'])\n",
+    "    \n",
+    "    # Sort by League Rank\n",
+    "    df = df.sort_values(by='league_rank', ascending=True)\n",
+    "    \n",
+    "    # Final filter and rename\n",
+    "    df = df[list(cols_map.keys())].rename(columns=cols_map)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Usage in Streamlit\n",
+    "al_df = get_al_league_standings()\n",
+    "#st.table(al_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a8a2d5d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_league_standings(league_id):\n",
+    "    \"\"\"Fetches American/National League standings as a single DataFrame ordered by Rank.\"\"\"\n",
+    "    \n",
+    "    TEAM_ABBR = {\n",
+    "        'Arizona Diamondbacks': 'ARI', 'Atlanta Braves': 'ATL', 'Baltimore Orioles': 'BAL',\n",
+    "        'Boston Red Sox': 'BOS', 'Chicago White Sox': 'CWS', 'Chicago Cubs': 'CHC',\n",
+    "        'Cincinnati Reds': 'CIN', 'Cleveland Guardians': 'CLE', 'Colorado Rockies': 'COL',\n",
+    "        'Detroit Tigers': 'DET', 'Houston Astros': 'HOU', 'Kansas City Royals': 'KC',\n",
+    "        'Los Angeles Angels': 'LAA', 'Los Angeles Dodgers': 'LAD', 'Miami Marlins': 'MIA',\n",
+    "        'Milwaukee Brewers': 'MIL', 'Minnesota Twins': 'MIN', 'New York Mets': 'NYM',\n",
+    "        'New York Yankees': 'NYY', 'Athletics': 'ATH', 'Philadelphia Phillies': 'PHI',\n",
+    "        'Pittsburgh Pirates': 'PIT', 'San Diego Padres': 'SD', 'San Francisco Giants': 'SF',\n",
+    "        'Seattle Mariners': 'SEA', 'St. Louis Cardinals': 'STL', 'Tampa Bay Rays': 'TB',\n",
+    "        'Texas Rangers': 'TEX', 'Toronto Blue Jays': 'TOR', 'Washington Nationals': 'WSH'\n",
+    "    }\n",
+    "\n",
+    "    # Fetch data only for the specified league\n",
+    "    standings_raw = statsapi.standings_data(leagueId=league_id, season=2025)\n",
+    "    \n",
+    "    # Combine all teams from all divisions into one list\n",
+    "    all_teams = []\n",
+    "    for division_id in standings_raw:\n",
+    "        all_teams.extend(standings_raw[division_id]['teams'])\n",
+    "    \n",
+    "    # Create the single DataFrame\n",
+    "    df = pd.DataFrame(all_teams)\n",
+    "    \n",
+    "    # 1. Abbreviate names\n",
+    "    df['name'] = df['name'].map(TEAM_ABBR).fillna(df['name'])\n",
+    "    \n",
+    "    # 2. Calculate PCT (Standard MLB format)\n",
+    "    df['W%'] = df['w'] / (df['w'] + df['l']).replace(0, 1)\n",
+    "    df['W%_sort'] = df['W%'] # Keep a numeric version for sorting\n",
+    "    df['W%'] = df['W%'].apply(lambda x: '{:.3f}'.format(x).lstrip('0'))\n",
+    "    \n",
+    "    # 3. Map and Rename\n",
+    "    cols_map = {\n",
+    "        'name': 'TM',\n",
+    "        'w': 'W',\n",
+    "        'l': 'L',\n",
+    "        'W%': 'PCT',\n",
+    "        'gb': 'GB',\n",
+    "        'wc_gb': 'WCGB',\n",
+    "        'league_rank': 'LG RNK'\n",
+    "    }\n",
+    "    \n",
+    "    # Convert 'league_rank' to numeric to ensure correct sorting (1 before 10)\n",
+    "    df['league_rank'] = pd.to_numeric(df['league_rank'])\n",
+    "    \n",
+    "    # Sort by League Rank\n",
+    "    df = df.sort_values(by='league_rank', ascending=True)\n",
+    "    \n",
+    "    # Final filter and rename\n",
+    "    df = df[list(cols_map.keys())].rename(columns=cols_map)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "04be51e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al_df = get_league_standings(103)\n",
+    "nl_df = get_league_standings(104)"
    ]
   }
  ],
