Start development: RadarLead

--- a/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
@@ -47,12 +47,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "d35b7752",
    "metadata": {},
    "outputs": [],
    "source": [
     "schedule = statsapi.schedule(date=  '6/15/2025')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a01e0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "        'date': '6/15/2025',\n",
+    "        'sportId': 1,\n",
+    "        'hydrate': 'team' \n",
+    "    }\n",
+    "data = statsapi.get('schedule', params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd8e3141",
+   "metadata": {},
+   "source": [
+    "Details of the different gamestatus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8b2a5b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = statsapi.meta(type=\"gameStatus\")"
    ]
   },
   {
@@ -513,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "08922795",
    "metadata": {},
    "outputs": [],
